# fairdata-download

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.generator  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties  utils
cli/: README  cache-cli  db-cli  generator-cli  init-cli-script.sh  mq-cli
dev_config/: fairdata-download-generator.docker.sh  fairdata-download-generator.env  fairdata-download-generator.service  fairdata-download-generator.sh  fairdata-download-gunicorn.py  fairdata-download-reload-queue.cron  fairdata-download-server-gunicorn.py  fairdata-download-server.env  fairdata-download-server.service  fairdata-download-server.sh  fairdata-download-server.socket  fairdata-download-service.nginx.conf  fairdata-download.env  fairdata-download.nginx.conf  fairdata-download.service  fairdata-download.sh  settings.cfg.example
dev_config/utils/: cache-cli  db-cli  fix-permissions  flush-all  generator-cli  init-dev-script.sh  initialize-docker  initialize-rabbitmq  initialize-service  initialize-venv  mq-cli  package-stats  rabbitmq-flush  rabbitmq-list-users-permissions  restart  run-behavioral-tests  run-memory-leak-test  run-tests  run-unit-tests  update-venv
docs/: configuration.md  deployment.md  installation.md  testing.md
download/: __init__.py  cache.py  celery.py  config.py  create_tables.sql  db.py  dto.py  events.py  generator.py  healthcheck.py  metax.py  mq.py  swagger.py  tasks.py  utils.py  views.py
download/blueprints/: download_api.py  healthcheck.py  swagger.py
download/model/: requests.py
download/services/: cache.py  db.py  generator.py  metax.py  mq.py  task_service.py
download/sql/: create_tables.sql
legacy-metrics/: 2022-11-14_events.json  2022-11-25_events.json  README  events.json  extract-events  generate-reports  publish-events  validate-reports
legacy-metrics/lib/: events.py  extract-events.py  generate-reports.py  (+2 more)
tests/: conftest.py  run-behavioral-tests  run-tests  run-unit-tests  test_celery.py  test_db.py  test_generator.py  test_views.py
utils/: empty-package-file  fix-permissions  flush-all  init-dev-script.sh  initialize-docker  initialize-rabbitmq  initialize-service  initialize-venv  package-stats  restart  run-memory-leak-test  update-venv
(+99 files in other folders)
