[tool.poetry]
name = "fairdata-download-service"
version = "1.2.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
celery = "<5.0"
Flask = "^1.1.2"
gunicorn = "^20.1.0"
marshmallow = "^3.11.1"
pika = "^1.2.0"
PyJWT = "<2.0.0"
python-dotenv = "^0.17.1"
requests = "^2.25.1"
SQLAlchemy = "^1.4.13"

[tool.poetry.dev-dependencies]
flask-swagger = "^0.2.14"
flask-swagger-ui = "^3.36.0"
pylint = "^2.8.2"
pytest = "^6.2.4"
coverage = "^5.5"
black = {version = "^21.5b0", allow-prereleases = true}
isort = "^5.8.0"

[tool.coverage.run]
branch = true
data_file = "~/.download/.coverage"
source = ["download"]

[tool.isort]
profile = "black"
src_paths = ["download"]
known_first_party = ["download"]
include_trailing_comma = true
combine_as_imports = true
line_length = 88

[tool.black]
target-version = ['py38']
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
