[tool.poetry]
name = "fairdata-download-service"
version = "1.2.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
celery = "<5.0.0"
Flask = "<1.2.0"
gunicorn = "<21.0.0"
marshmallow = "<3.9.0"
pendulum = "^2.1.2"
pika = "^1.2.0"
PyJWT = "<2.0"
python-dotenv = "^0.19.1"
requests = "^2.26.0"
SQLAlchemy = "<1.4"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
flask-swagger = "^0.2.14"
flask-swagger-ui = "^3.36.0"
pylint = "^2.11.1"
pytest = "^6.2.5"
coverage = "^6.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
