[tool.poetry]
name = "fairdata-download-service"
version = "1"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "==3.8"
celery = "==4.4.7"
flask = "==2.2.2"
gunicorn = "==20.1.0"
marshmallow = "==3.18.0"
pendulum = "==2.1.2"
pika = "==1.3.1"
pyjwt = "==1.7.1"
python-dotenv = "==0.21.0"
requests = "==2.28.1"
sqlalchemy = "==1.4.42"
tabulate = "==0.9.0"

[tool.poetry.dev-dependencies]
flask-swagger = "==0.2.14"
flask-swagger-ui = "==4.11.1"
pylint = "==2.15.5"
pytest = "==7.2.0"
coverage = "==6.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
